Add new 'simple' section with corresponding HTML and SCSS; include multiple images for enhanced visual presentation and responsiveness.

--- a/src/index.html
+++ b/src/index.html
@@ -31,6 +31,7 @@
     {{> section-meet}}
     {{> section-ask}}
     {{> section-smart}}
+    {{> section-simple}}
     {{> section-swipe }}
     {{> section-cards-bottom}}
     {{> checkout-section }}
