--- a/src/sections/section-finally.html
+++ b/src/sections/section-finally.html
@@ -22,7 +22,7 @@
             <img src="/images/star-light.svg" alt= "image not found" class="finally__star star-1 light">
             <img src="/images/star-light.svg" alt= "image not found" class="finally__star star-2 light">
             <h2 class="finally__title content-block__title wow animate__animated animate__fadeInUp">
-                Finally, a wallet that’s as bold and user-friendly as you are. <br> No more dull
+                Finally, a wallet that’s as bold and <br> user-friendly as you are. <br> No more dull
                 interfaces or geek-speak.
             </h2>
         </div>
