--- a/src/sections/section-meet.html
+++ b/src/sections/section-meet.html
@@ -4,7 +4,7 @@
             <img class="dark" src="/images/horizontal-border-2.png" alt="image not found">
             <img class="light" src="/images/horizontal-border-2-light.png" alt="image not found">
         </picture>
-        <h2 class="meet__title wow animate__animated animate__fadeInUp">Meet PIG <br> Your Personal Crypto <span>BFF</span></h2>
+        <h2 class="meet__title wow animate__animated animate__fadeInUp"><span class="meet__title-span-gray">Meet PIG</span> <br> Your Personal Crypto <span class="meet__title-span-pink">BFF</span></h2>
         <picture class="meet__img dark">
             <source srcset="/images/meet-img-1.webp" type="image/webp">
             <img src="/images/meet-img-1.png" alt="image not found">
