Enhance visual presentation across multiple sections by adding animation classes and data attributes for improved user engagement. Update image elements in checkout, ask, cards, feed, launch, mention, simple, swipe, header, and footer sections to include WOW.js animations with appropriate delays.

--- a/src/sections/section-ask.html
+++ b/src/sections/section-ask.html
@@ -1,26 +1,26 @@
 <section class="ask">
     <div class="container">
-        <picture class="ask__img img-1 dark">
+        <picture class="ask__img img-1 dark wow animate__animated animate__fadeInLeft" data-wow-delay="0.2s">
             <source srcset="/images/ask-img-1.webp" type="image/webp">
             <img src="/images/ask-img-1.png" alt="image not found">
         </picture>
-        <picture class="ask__img img-2 dark">
+        <picture class="ask__img img-2 dark wow animate__animated animate__fadeInUp" data-wow-delay="0.4s">
             <source srcset="/images/ask-img-2.webp" type="image/webp">
             <img src="/images/ask-img-2.png" alt="image not found">
         </picture>
-        <picture class="ask__img img-3 dark">
+        <picture class="ask__img img-3 dark wow animate__animated animate__fadeInRight" data-wow-delay="0.6s">
             <source srcset="/images/ask-img-3.webp" type="image/webp">
             <img src="/images/ask-img-3.png" alt="image not found">
         </picture>
-        <picture class="ask__img img-1 light">
+        <picture class="ask__img img-1 light wow animate__animated animate__fadeInLeft" data-wow-delay="0.2s">
             <source srcset="/images/ask-img-1-light.webp" type="image/webp">
             <img src="/images/ask-img-1.png" alt="image not found">
         </picture>
-        <picture class="ask__img img-2 light">
+        <picture class="ask__img img-2 light wow animate__animated animate__fadeInUp" data-wow-delay="0.4s">
             <source srcset="/images/ask-img-2-light.webp" type="image/webp">
             <img src="/images/ask-img-2.png" alt="image not found">
         </picture>
-        <picture class="ask__img img-3 light">
+        <picture class="ask__img img-3 light wow animate__animated animate__fadeInRight" data-wow-delay="0.6s">
             <source srcset="/images/ask-img-3-light.webp" type="image/webp">
             <img src="/images/ask-img-3.png" alt="image not found">
         </picture>
