--- a/src/sections/section-cards-middle.html
+++ b/src/sections/section-cards-middle.html
@@ -67,7 +67,7 @@
                     <img src="/images/cards-img-5-light.png" alt="image not found">
                 </picture>
             </div>
-            <div class="cards__item cards-middle__item">
+            <div class="cards__item cards-middle__item wow animate__animated animate__fadeInUp" data-wow-delay="0.6s">
                 <p class="cards__text cards-middle__text top-text">It’s seriously that simple</p>
                 <p class="cards__text cards-middle__text bottom-text">Sending crypto should feel
                     like sending a text, and with PinkWallet, it does. </p>
