--- a/src/sections/section-cards-top.html
+++ b/src/sections/section-cards-top.html
@@ -1,7 +1,7 @@
 <section class="cards cards-top">
     <div class="container">
         <div class="cards__content cards-top__content">
-            <div class="cards__item cards-top__item">
+            <div class="cards__item cards-top__item wow animate__animated animate__fadeInLeft">
                 <p class="cards__text cards-top__text top-text">Send, receive, swap… <br> it’s all
                     fee-free to you</p>
                 <p class="cards__text cards-top__text bottom-text">No more watching your $10
