--- a/src/sections/section-feed.html
+++ b/src/sections/section-feed.html
@@ -10,11 +10,11 @@
                         Crypto Feed
                     </span>
                 </h2>
-                <picture class="feed__img img-1 dark">
+                <picture class="feed__img img-1 dark wow animate__animated animate__fadeInRight" data-wow-delay="0.3s">
                     <source srcset="/images/feed-img-1.webp" type="image/webp">
                     <img src="/images/feed-img-1.png" alt="image not found">
                 </picture>
-                <picture class="feed__img img-1 light">
+                <picture class="feed__img img-1 light wow animate__animated animate__fadeInRight" data-wow-delay="0.3s">
                     <source srcset="/images/feed-img-1-light.webp" type="image/webp">
                     <source srcset="/images/feed-img-1-light.png" type="image/png">
                     <img src="/images/feed-img-1-light.png" alt="image not found">
@@ -31,17 +31,17 @@
                 </p>
             </div>
             <div class="feed__content-bottom">
-                <picture class="feed__img img-2 dark">
+                <picture class="feed__img img-2 dark wow animate__animated animate__fadeInLeft" data-wow-delay="0.6s">
                     <source srcset="/images/feed-img-2.webp" type="image/webp">
                     <img src="/images/feed-img-2.png" alt="image not found">
                 </picture>
-                <picture class="feed__img img-2 light">
+                <picture class="feed__img img-2 light wow animate__animated animate__fadeInLeft" data-wow-delay="0.6s">
                     <source srcset="/images/feed-img-2-light.webp" type="image/webp">
                     <source srcset="/images/feed-img-2-light.png" type="image/png">
                     <img src="/images/feed-img-2-light.png" alt="image not found">
                 </picture>
                 <div class="feed__content-bottom-text-wrapper">
-                    <p class="feed__text top-text">
+                    <p class="feed__text top-text wow animate__animated animate__fadeInUp" data-wow-delay="0.7s">
                         It’s like your crypto FYP, because we know
                         short, snappy content is life
                     </p>
