--- a/src/sections/section-launch.html
+++ b/src/sections/section-launch.html
@@ -5,9 +5,9 @@
             <img src="/images/launch-frame.png" alt="image not found">
         </picture>
         <div class="launch__content">
-            <span class="launch__sublabel">Pink Is Paying. Literally.</span>
-            <h3 class="launch__subtitle">We’re celebrating the  <br>  launch of PinkWallet with a... </h3>
-            <div class="launch__img-wrapper">
+            <span class="launch__sublabel wow animate__animated animate__fadeInUp">Pink Is Paying. Literally.</span>
+            <h3 class="launch__subtitle wow animate__animated animate__fadeInUp" data-wow-delay="0.2s">We’re celebrating the  <br>  launch of PinkWallet with a... </h3>
+            <div class="launch__img-wrapper wow animate__animated animate__zoomIn" data-wow-delay="0.4s">
                 <div class="launch__img-text-wrapper">
                     <img src="/images/launch-icon-1.svg" alt="image not found">
                     <span class="launch__img-text">0.33 BTC giveaway</span>
@@ -18,33 +18,30 @@
                 </picture>
             </div>
             <div class="launch__labels">
-                <div class="launch__label wow animate__ animate__fadeInLeft" data-wow-delay="0.8s"
-                    style="visibility: visible; animation-delay: 0.8s; animation-name: fadeInLeft;">
+                <div class="launch__label wow animate__animated animate__fadeInLeft" data-wow-delay="0.6s">
                     <img src="/images/launch-icon-2.svg" alt="image not found">
                     <span>Early users</span>
                 </div>
-                <div class="launch__label wow animate__ animate__fadeInUp" data-wow-delay="1s"
-                    style="visibility: visible; animation-delay: 1s; animation-name: fadeInUp;">
+                <div class="launch__label wow animate__animated animate__fadeInUp" data-wow-delay="0.8s">
                     <img src="/images/launch-icon-3.svg" alt="image not found">
                     <span>Early perks</span>
                 </div>
-                <div class="launch__label wow animate__ animate__fadeInRight" data-wow-delay="1.2s"
-                    style="visibility: visible; animation-delay: 1.2s; animation-name: fadeInRight;">
+                <div class="launch__label wow animate__animated animate__fadeInRight" data-wow-delay="1s">
                     <img src="/images/launch-icon-4.svg" alt="image not found">
                     <span>Possibly Bitcoin</span>
                 </div>
             </div>
-            <h2 class="launch__title">Join the waitlist for a chance to win: no noise, no hoops,
+            <h2 class="launch__title wow animate__animated animate__fadeInUp" data-wow-delay="1.2s">Join the waitlist for a chance to win: no noise, no hoops,
                 just
                 vibes</h2>
-            <p class="launch__text"> No spam. No gimmicks. Just early access + one very pink
+            <p class="launch__text wow animate__animated animate__fadeInUp" data-wow-delay="1.4s"> No spam. No gimmicks. Just early access + one very pink
                 opportunity.
             </p>
-            <a href="#" target="_blank" class="launch__button">
+            <a href="#" target="_blank" class="launch__button wow animate__animated animate__fadeInUp" data-wow-delay="1.6s">
                 <img src="/images/launch-icon-5.svg" alt="image not found">
                 <span>Win 0.33 BTC</span>
             </a>
-            <p class="launch__text-bottom">Giveaway details announced at launch. Terms apply.</p>
+            <p class="launch__text-bottom wow animate__animated animate__fadeInUp" data-wow-delay="1.8s">Giveaway details announced at launch. Terms apply.</p>
         </div>
     </div>
 </section>
