--- a/src/sections/section-mention.html
+++ b/src/sections/section-mention.html
@@ -2,7 +2,7 @@
     <div class="container">
         <img src="/images/starline.webp" alt= "image not found" class="mention__line">
         <div class="mention__content">
-            <h3 class="mention__title">And did we mention the look? <br> Chef’s kiss</h3>
+            <h3 class="mention__title wow animate__animated animate__fadeInUp">And did we mention the look? <br> Chef’s kiss</h3>
             <p class="mention__text wow animate__animated animate__fadeInUp" data-wow-delay="0.2s">Clean, modern, and so easy to use – we keep things simple and uncluttered so you can focus on the good stuff (your money, honey) without getting lost in menus.</p>
         </div>
     </div>
