--- a/src/sections/section-simple.html
+++ b/src/sections/section-simple.html
@@ -6,39 +6,39 @@
             <img src="/images/launch-frame.png" alt="image not found">
         </picture>
         <div class="simple__content">
-            <picture class="simple__border">
+            <picture class="simple__border wow animate__animated animate__fadeIn">
                 <img class="dark" src="/images/simple-border.png" alt="image not found">
                 <img class="light" src="/images/simple-border-light.png" alt="image not found">
             </picture>
-            <h2 class="simple__title">Still scrolling? <br> That’s 0.33 BTC on the line!</h2>
-            <picture class="simple__img dark">
+            <h2 class="simple__title wow animate__animated animate__fadeInUp">Still scrolling? <br> That’s 0.33 BTC on the line!</h2>
+            <picture class="simple__img dark wow animate__animated animate__fadeInRight" data-wow-delay="0.2s">
                 <source srcset="/images/simple-img.webp" type="image/webp">
                 <img src="/images/simple-img.png" alt="image not found">
             </picture>
-            <picture class="simple__img light">
+            <picture class="simple__img light wow animate__animated animate__fadeInRight" data-wow-delay="0.2s">
                 <source srcset="/images/simple-img-light.webp" type="image/webp">
                 <img src="/images/simple-img-light.png" alt="image not found">
             </picture>
-            <h3 class="simple__subtitle subtitle-1">So we made it simple</h3>
+            <h3 class="simple__subtitle subtitle-1 wow animate__animated animate__fadeInUp" data-wow-delay="0.4s">So we made it simple</h3>
             <p class="simple__text text-1">Join the PinkWallet waitlist and you’ll be entered into
                 our 0.33
                 BTC launch giveaway — our way of saying thanks for believing in pink finance before
                 it was obvious.
             </p>
-            <picture class="simple__img-2 dark">
+            <picture class="simple__img-2 dark wow animate__animated animate__fadeInLeft" data-wow-delay="0.8s">
                 <source srcset="/images/simple-img-2.webp" type="image/webp">
                 <img src="/images/simple-img-2.png" alt="image not found">
             </picture>
-            <picture class="simple__img-2 light">
+            <picture class="simple__img-2 light wow animate__animated animate__fadeInLeft" data-wow-delay="0.8s">
                 <source srcset="/images/simple-img-2-light.webp" type="image/webp">
                 <img src="/images/simple-img-2-light.png" alt="image not found">
             </picture>
             <div class="simple__footer">
-                <h3 class="simple__subtitle subtitle-2">Pink favors the early</h3>
-                <p class="simple__text text-2">No whitepapers. No gatekeeping. <br> Just a little
+                <h3 class="simple__subtitle subtitle-2 wow animate__animated animate__fadeInUp" data-wow-delay="1s">Pink favors the early</h3>
+                <p class="simple__text text-2 wow animate__animated animate__fadeInUp" data-wow-delay="1.2s">No whitepapers. No gatekeeping. <br> Just a little
                     Bitcoin energy.
                 </p>
-                <button class="simple__button btn" data-join-waitlist>
+                <button class="simple__button btn wow animate__animated animate__fadeInUp" data-wow-delay="1.4s" data-join-waitlist>
                     Get On the Waitlist
                     <span>
                         <img src="/images/arrow.svg" alt="image not found">
