--- a/src/sections/checkout-section.html
+++ b/src/sections/checkout-section.html
@@ -1,23 +1,23 @@
 <div class="checkout-section content-block">
     <div class="container">
         <div class="checkout-section__content content-block__inner">
-            <picture class="checkout-section__img img-1">
+            <picture class="checkout-section__img img-1 wow animate__animated animate__fadeInLeft" data-wow-delay="0.1s">
                 <source srcset="/images/card-1.webp" type="image/webp">
                 <img src="/images/card-1.png" alt="image not found">
             </picture>
-            <picture class="checkout-section__img img-2 ">
+            <picture class="checkout-section__img img-2 wow animate__animated animate__fadeInUp" data-wow-delay="0.2s">
                 <source srcset="/images/card-2.webp" type="image/webp">
                 <img src="/images/card-2.png" alt="image not found">
             </picture>
-            <picture class="checkout-section__img img-3">
+            <picture class="checkout-section__img img-3 wow animate__animated animate__zoomIn" data-wow-delay="0.3s">
                 <source srcset="/images/card-3.webp" type="image/webp">
                 <img src="/images/card-3.png" alt="image not found">
             </picture>
-            <picture class="checkout-section__img img-4">
+            <picture class="checkout-section__img img-4 wow animate__animated animate__fadeInDown" data-wow-delay="0.4s">
                 <source srcset="/images/card-4.webp" type="image/webp">
                 <img src="/images/card-4.png" alt="image not found">
             </picture>
-            <picture class="checkout-section__img img-5">
+            <picture class="checkout-section__img img-5 wow animate__animated animate__fadeInRight" data-wow-delay="0.5s">
                 <source srcset="/images/card-5.webp" type="image/webp">
                 <img src="/images/card-5.png" alt="image not found">
             </picture>
