Add new SVG images for creator and creator-light; update footer to include creator link with responsive design. Refactor header for improved layout and remove unused classes for cleaner code.

--- a/src/index.html
+++ b/src/index.html
@@ -15,34 +15,36 @@
 
 <body>
   {{> header }}
-  <main class="main">
-    {{> section-hero }}
-    {{> section-launch }}
-    {{> section-finally }}
-    {{> sections-wallet }}
-    {{> section-mention }}
-    {{> short-section }}
-    {{> section-fees}}
-    {{> section-cards-top}}
-    {{> section-magic}}
-    {{> swap-section }}
-    {{> section-cards-middle}}
-    {{> section-feed}}
-    {{> section-meet}}
-    {{> section-ask}}
-    {{> section-smart}}
-    {{> section-simple}}
-    {{> section-swipe }}
-    {{> section-cards-bottom}}
-    {{> checkout-section }}
-    {{> section-ready}}
-    {{> section-promise }}
-    {{> section-future }}
-  </main>
-  {{> waitlist-popoup }}
-  {{> done-popoup }}
-  <div class="popup-overlay" id="popup-overlay"></div>
-  {{> footer }}
+  <div id="wrapper">
+    <main class="main">
+      {{> section-hero }}
+      {{> section-launch }}
+      {{> section-finally }}
+      {{> sections-wallet }}
+      {{> section-mention }}
+      {{> short-section }}
+      {{> section-fees}}
+      {{> section-cards-top}}
+      {{> section-magic}}
+      {{> swap-section }}
+      {{> section-cards-middle}}
+      {{> section-feed}}
+      {{> section-meet}}
+      {{> section-ask}}
+      {{> section-smart}}
+      {{> section-simple}}
+      {{> section-swipe }}
+      {{> section-cards-bottom}}
+      {{> checkout-section }}
+      {{> section-ready}}
+      {{> section-promise }}
+      {{> section-future }}
+    </main>
+    {{> waitlist-popoup }}
+    {{> done-popoup }}
+    <div class="popup-overlay" id="popup-overlay"></div>
+    {{> footer }}
+  </div>
   <script type="module" src="/js/main.js"></script>
 </body>
 
