--- a/src/sections/section-hero.html
+++ b/src/sections/section-hero.html
@@ -44,7 +44,7 @@
                 </div>
                 <div class="hero__label wow animate__animated animate__fadeInRight" data-wow-delay="1.2s">
                     <img src="/images/label-icon-3.svg" alt="image not found">
-                    <span>Comes with a free Debit Card</span>
+                    <span>Comes with a Free Debit Card</span>
                 </div>
             </div>
         </div>
