--- a/src/sections/section-simple.html
+++ b/src/sections/section-simple.html
@@ -22,7 +22,7 @@
             <h3 class="simple__subtitle subtitle-1 wow animate__animated animate__fadeInUp" data-wow-delay="0.4s">So we made it simple</h3>
             <p class="simple__text text-1">Join the PinkWallet waitlist and you’ll be entered into
                 our 0.33
-                BTC launch giveaway — our way of saying thanks for believing in pink finance before
+                BTC launch giveaway — <br> our way of saying thanks for believing in pink finance before
                 it was obvious.
             </p>
             <picture class="simple__img-2 dark wow animate__animated animate__fadeInLeft" data-wow-delay="0.8s">
