--- a/src/sections/section-smart.html
+++ b/src/sections/section-smart.html
@@ -10,7 +10,7 @@
         </picture>
         <div class="smart__content">
             <h2 class="smart__title wow animate__animated animate__fadeInUp">She’s smart, sassy, and always on call</h2>
-            <p class="smart__text wow animate__animated animate__fadeInUp" data-wow-delay="0.2s">Consider her your 24/7 crypto concierge. Manage your money with confidence (and maybe a few jokes along the way) because PIG’s got your back.</p>
+            <p class="smart__text wow animate__animated animate__fadeInUp" data-wow-delay="0.2s">Consider her your 24/7 crypto concierge. Manage your money with confidence <br> (and maybe a few jokes along the way) because PIG’s got your back.</p>
         </div>
     </div>
 </section>
