--- a/src/sections/section-swipe.html
+++ b/src/sections/section-swipe.html
@@ -5,27 +5,27 @@
             With PinkWallet’s crypto-backed debit card, your coins step out with you into the real
             world. </p>
         <div class="swipe__content">
-            <picture class="swipe__img img-1 dark wow animate__animated animate__fadeInLeft" data-wow-delay="0.3s">
+            <picture class="swipe__img img-1 dark">
                 <source srcset="/images/swipe-img-1.webp" type="image/webp">
                 <img src="/images/swipe-img-1.png" alt="image not found">
             </picture>
-            <picture class="swipe__img img-2 dark wow animate__animated animate__fadeInUp" data-wow-delay="0.5s">
+            <picture class="swipe__img img-2 dark">
                 <source srcset="/images/swipe-img-2.webp" type="image/webp">
                 <img src="/images/swipe-img-2.png" alt="image not found">
             </picture>
-            <picture class="swipe__img img-3 dark wow animate__animated animate__fadeInRight" data-wow-delay="0.7s">
+            <picture class="swipe__img img-3 dark">
                 <source srcset="/images/swipe-img-3.webp" type="image/webp">
                 <img src="/images/swipe-img-3.png" alt="image not found">
             </picture>
-            <picture class="swipe__img img-1 light wow animate__animated animate__fadeInLeft" data-wow-delay="0.3s">
+            <picture class="swipe__img img-1 light">
                 <source srcset="/images/swipe-img-1-light.webp" type="image/webp">
                 <img src="/images/swipe-img-1-light.png" alt="image not found">
             </picture>
-            <picture class="swipe__img img-2 light wow animate__animated animate__fadeInUp" data-wow-delay="0.5s">
+            <picture class="swipe__img img-2 light">
                 <source srcset="/images/swipe-img-2-light.webp" type="image/webp">
                 <img src="/images/swipe-img-2-light.png" alt="image not found">
             </picture>
-            <picture class="swipe__img img-3 light wow animate__animated animate__fadeInRight" data-wow-delay="0.7s">
+            <picture class="swipe__img img-3 light">
                 <source srcset="/images/swipe-img-3-light.webp" type="image/webp">
                 <img src="/images/swipe-img-3-light.png" alt="image not found">
             </picture>
