--- a/src/sections/swap-section.html
+++ b/src/sections/swap-section.html
@@ -22,7 +22,7 @@
                 <img src="/images/coins-4.png" alt= "image not found" >
             </picture>
             <h2 class="swap-section__title content-block__title wow animate__animated animate__fadeInUp">
-                With our multi-chain instant swap, you trade assets from different ecosystems in one tap, like it’s NBD.It’s all under one roof, happening faster than you can say “to the moon”.One wallet, every chain, zero headaches.
+                With our multi-chain instant swap, <br> you trade assets from different <br> ecosystems in one tap, like it`s NBD. <br>It`s all under one roof, happening faster than you can say “to the moon”. <br> One wallet, every chain, zero headaches.
             </h2>
             <button class="swap-section__button btn wow animate__animated animate__fadeInUp" data-wow-delay="0.3s" data-join-waitlist>
                 Join Waitlist
