Refactor HTML structure in checkout and short sections by replacing <div> with <section> for semantic clarity. Update text formatting in section-feed, section-magic, and section-smart for improved readability. Adjust SCSS styles across multiple files for better layout consistency and responsiveness, including padding, margin, and font size modifications.

--- a/src/sections/checkout-section.html
+++ b/src/sections/checkout-section.html
@@ -1,4 +1,4 @@
-<div class="checkout-section content-block">
+<section class="checkout-section content-block">
     <div class="container">
         <div class="checkout-section__content content-block__inner">
             <picture class="checkout-section__img img-1 wow animate__animated animate__fadeInLeft" data-wow-delay="0.1s">
@@ -33,4 +33,4 @@
             </button>
         </div>
     </div>
-</div>
+</section>
