--- a/src/sections/section-feed.html
+++ b/src/sections/section-feed.html
@@ -46,8 +46,8 @@
                         short, snappy content is life
                     </p>
                     <p class="feed__text bottom-text wow animate__animated animate__fadeInUp" data-wow-delay="0.8s">
-                        Swipe through quick video clips, memes, and market updates as easily as you
-                        scroll your socials. Learn, laugh, and stay in the loop – no MBA required.
+                        Swipe through quick video clips, <br> memes, and market updates as easily as <br> you
+                        scroll your socials. Learn, laugh, and <br> stay in the loop – no MBA required.
                     </p>
                 </div>
             </div>
