--- a/src/sections/section-fees.html
+++ b/src/sections/section-fees.html
@@ -25,8 +25,7 @@
                 it’s all fee-free to you.</p>
             <p class="fees__text top-text mob">Other wallets hit you with surprise fees at checkout –
                 not cool</p>
-            <p class="fees__text bottom-text mob">PinkWallet handles all transaction costs on the
-                backend, so you never see a gas fee ever. </p>
+            <p class="fees__text bottom-text mob">PinkWallet handles all transaction costs on the backend, so you never see a gas fee ever. Send, receive, swap… it’s all fee-free to you.</p>
         </div>
     </div>
 </section> 
