--- a/src/sections/section-magic.html
+++ b/src/sections/section-magic.html
@@ -14,8 +14,8 @@
             <p class="magic__text top-text wow animate__animated animate__fadeInUp" data-wow-delay="0.6s">Why limit yourself to one chain? <br> PinkWallet lets you
                 swap coins across multiple blockchains instantly</p>
             <p class="magic__text bottom-text wow animate__animated animate__fadeInUp" data-wow-delay="0.8s">PinkWallet lets you swap coins across multiple
-                blockchains instantly. Ethereum, Bitcoin, Solana – you name it. No more juggling
-                multiple apps or getting stuck thinking “ugh, this token is on which network?” </p>
+                blockchains instantly. Ethereum, Bitcoin, <br> Solana – you name it. No more juggling <br>
+                multiple apps or getting stuck thinking "ugh", <br> this token is on which network?” </p>
         </div>
     </div>
 </section>
