--- a/src/sections/short-section.html
+++ b/src/sections/short-section.html
@@ -1,4 +1,4 @@
-<div class="short-section content-block">
+<section class="short-section content-block">
     <div class="container">
         <div class="short-section__content content-block__inner">
             <img src="/images/star-gray.png" alt= "image not found" class="short-section__star star-1 dark">
@@ -26,4 +26,4 @@
             </button>
         </div>
     </div>
-</div>
+</section>
