--- a/src/sections/swap-section.html
+++ b/src/sections/swap-section.html
@@ -1,4 +1,4 @@
-<div class="swap-section content-block">
+<section class="swap-section content-block">
     <div class="container">
         <div class="swap-section__content content-block__inner">
             <picture class="swap-section__img img-1">
@@ -22,7 +22,7 @@
                 <img src="/images/coins-4.png" alt= "image not found" >
             </picture>
             <h2 class="swap-section__title content-block__title wow animate__animated animate__fadeInUp">
-                With our multi-chain instant swap, <br> you trade assets from different <br> ecosystems in one tap, like it`s NBD. <br>It`s all under one roof, happening faster than you can say “to the moon”. <br> One wallet, every chain, zero headaches.
+                With our multi-chain instant swap, <br> you trade assets from different <br> ecosystems in one tap, like it`s NBD. <br>It`s all under one roof, happening faster <br> than you can say “to the moon”. <br> One wallet, every chain, zero headaches.
             </h2>
             <button class="swap-section__button btn wow animate__animated animate__fadeInUp" data-wow-delay="0.3s" data-join-waitlist>
                 Join Waitlist
@@ -32,4 +32,4 @@
             </button>
         </div>
     </div>
-</div>
+</section>
