Refactor HTML structure in section-cards-middle, section-feed, and section-fees for improved readability by removing unnecessary line breaks. Adjust SCSS styles across multiple files, including max-width and font-weight modifications, to enhance layout consistency and responsiveness.

--- a/src/sections/section-cards-middle.html
+++ b/src/sections/section-cards-middle.html
@@ -4,7 +4,7 @@
             <div class="cards__item cards-middle__item wow animate__animated animate__fadeInUp">
                 <p class="cards__text cards-middle__text top-text">Contacts, Not Codes</p>
                 <p class="cards__text cards-middle__text bottom-text">Long wallet addresses are so
-                    last year. <br> Who has time to double-check 0xAJF…37QB line by line?</p>
+                    last year. Who has time to double-check 0xAJF…37QB line by line?</p>
                 <picture class="cards-middle__img dark">
                     <source srcset="/images/cards-img-3-mob.webp" media="(max-width: 768px)"
                         type="image/webp">
