--- a/src/sections/section-feed.html
+++ b/src/sections/section-feed.html
@@ -25,7 +25,7 @@
                 <p class="feed__text bottom-text wow animate__animated animate__fadeInUp" data-wow-delay="0.4s">
                     PinkWallet serves up a vertical, scrollable feed of the latest crypto news,
                     trends,
-                    and tips – all in a fun, snackable format. <br> Say goodbye to snooze-fest
+                    and tips – all in a fun, snackable format. Say goodbye to snooze-fest
                     charts and
                     hello to an endless feed you’ll actually enjoy browsing.
                 </p>
