--- a/src/sections/section-fees.html
+++ b/src/sections/section-fees.html
@@ -21,7 +21,7 @@
             <p class="fees__text wow animate__animated animate__fadeInUp desk" data-wow-delay="0.4s">
                 Other wallets hit you with surprise fees at checkout – not cool.
                 PinkWallet handles all transaction costs on the backend, so you never see a gas fee
-                ever. Send, receive, swap…
+                ever. Send, receive, swap… <br>
                 it’s all fee-free to you.</p>
             <p class="fees__text top-text mob">Other wallets hit you with surprise fees at checkout –
                 not cool</p>
