--- a/src/sections/sections-wallet.html
+++ b/src/sections/sections-wallet.html
@@ -11,7 +11,8 @@
                 <source srcset="/images/starline-light.webp" type="image/webp">
                 <img src="/images/starline-light.png" alt="image not found">
             </picture>
-            <h3 class="wallet-top__title wow animate__animated animate__fadeInUp"> PinkWallet is where gorgeous design meets effortless
+            <h3 class="wallet-top__title wow animate__animated animate__fadeInUp"> PinkWallet is
+                where gorgeous design meets effortless
                 usability,
                 giving you an experience so intuitive it just works from the first tap.</h3>
             <picture class="wallet-top__img dark">
@@ -41,7 +42,8 @@
                 <img src="./images/cards-list-2-light.png" alt="image not found">
             </picture>
         </div>
-        <h2 class="wallet-middle__title wow animate__animated animate__fadeInUp">Not Your Average Crypto Wallet</h2>
+        <h2 class="wallet-middle__title wow animate__animated animate__fadeInUp">Not Your Average
+            Crypto Wallet</h2>
         <picture class="wallet-middle__img dark">
             <source srcset="/images/wallet-img-2.webp" type="image/webp">
             <img src="/images/wallet-img-2.png" alt="image not found">
@@ -50,13 +52,14 @@
             <source srcset="/images/wallet-img-2-light.webp" type="image/webp">
             <img src="/images/wallet-img-2-light.png" alt="image not found">
         </picture>
-        <p class="wallet-middle__text top-text wow animate__animated animate__fadeInUp" data-wow-delay="0.2s">Tired of crypto apps that feel like they’re built by
+        <p class="wallet-middle__text top-text wow animate__animated animate__fadeInUp"
+            data-wow-delay="0.2s">Tired of crypto apps that feel like <br> they’re built by
             and
             for tech bros? Same</p>
-        <p class="wallet-middle__text bottom-text wow animate__animated animate__fadeInUp" data-wow-delay="0.4s">PinkWallet is different. We designed it with you
-            in
-            mind – inclusive , intuitive, and a little bit cheeky. Because why should finance be
-            boring?
+        <p class="wallet-middle__text bottom-text wow animate__animated animate__fadeInUp"
+            data-wow-delay="0.4s">PinkWallet is different. We designed it with you
+            in mind – inclusive , intuitive, and a little bit cheeky. Because why should finance be
+            boring?</p>
         </p>
     </div>
 </section>
@@ -65,8 +68,10 @@
         <img src="/images/horizontal-border-2.png" alt="image not found"
             class="wallet-bottom__border">
         <div class="wallet-bottom__content">
-            <h2 class="wallet-bottom__title wow animate__animated animate__fadeInUp">No more confusing jargon or stiff banker-talk</h2>
-            <p class="wallet-bottom__text wow animate__animated animate__fadeInUp" data-wow-delay="0.2s">PinkWallet speaks your language (we keep it
+            <h2 class="wallet-bottom__title wow animate__animated animate__fadeInUp">No more
+                confusing jargon or stiff banker-talk</h2>
+            <p class="wallet-bottom__text wow animate__animated animate__fadeInUp"
+                data-wow-delay="0.2s">PinkWallet speaks your language (we keep it
                 conversational,
                 not corporate ) and even throws in a wink of humor when you need it. It’s finance,
                 but
