--- a/src/sections/section-hero.html
+++ b/src/sections/section-hero.html
@@ -18,7 +18,9 @@
         </div>
         <div class="hero__content">
             <h1 class="hero__title wow animate__animated animate__fadeInUp">
-                The Future <div class="hero__title-inner"><i>is</i> <span>Pink</span></div>
+                The Future <div class="hero__title-inner"><i>is</i>
+                    <span data-text="Pink"><b>Pink</b></span>
+                </div>
             </h1>
             <h2 class="hero__subtitle wow animate__animated animate__fadeInUp" data-wow-delay="0.2s">
                 Finance just got a major glow-up
@@ -27,7 +29,8 @@
                 Meet PinkWallet, the fun, fearless crypto wallet that <i>slays</i> boring finance
                 with <u>style.</u>
             </p>
-            <button class="hero__button btn wow animate__animated animate__fadeInUp" data-wow-delay="0.6s" data-join-waitlist>
+            <button class="hero__button btn wow animate__animated animate__fadeInUp" data-wow-delay="0.6s"
+                data-join-waitlist>
                 Join Waitlist
                 <span>
                     <img src="/images/arrow.svg" alt="image not found">
